Fri Sep  2 14:36:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_search_const_defined_class): search
	  ancestors only when global scope.  [ruby-core:39227] [Bug #5264]

Fri Sep  2 09:58:08 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_tokadd_string, parser_yylex): ignore a backslash
	  which prefixes an non-ascii character, which has no escape
	  syntax.  [ruby-core:39222] [Ruby 1.9 - Bug #5262]

Fri Sep  2 04:05:25 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: emit strings tagged as
	  ascii-8bit as binary in YAML.
	* test/psych/test_string.rb: corresponding test.

Fri Sep  2 01:07:14 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_round): substitute machine dependent magic number.

Thu Sep  1 17:31:22 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insns.def (defineclass), vm_insnhelper.c (vm_get_cvar_base): see
	  also inherited constants for classes without superclass and
	  modules.  [ruby-core:37698] [Bug #3423]

Thu Sep  1 16:18:44 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* Release GVL while OpenSSL's public key generation.

	    t = Thread.new { print "."; sleep 0.1 }
	    key = OpenSSL::PKey::RSA.new(2048)
	    #=> Thread t works in parallel with public key generation if
		OS/machine allows it.

	  This works with OpenSSL >= 0.9.8. From this version, it has new
	  public key generation function which allows us to interrupt the
	  execution while pkey generation iterations.

	* ext/openssl/extconf.rb: Check existence of OpenSSL's new public key
	  generation function. (DH_generate_parameters_ex,
	  DSA_generate_parameters_ex and RSA_generate_key_ex.

	* ext/openssl/ossl_pkey.{h,c} (ossl_generate_cb_2,
	  ossl_generate_cb_stop): Added new callback function for OpenSSL pkey
	  generation which handles Thread interruption by Ruby.
	  ossl_generate_cb_stop is the unblock function(ubf) for Ruby which